# seibot

./: .gitignore  LICENSE  README.md  pyproject.toml  text.txt
config/: example_config.ini  example_output.ini  filter_config.ini  high_pass_filters.ini  low_pass_filters.ini  sensor_correction_filters.ini  test.ini
data/: hsts_model_L2L.mat  t120h.mat  (+5 more)
filters/: FF.pkl  (+5 more)
sammie/: Untitled.ipynb  pyproject.toml
sammie/etc/: config.ini  config.py
sammie/etc/data/: L1ISIHAM5.txt  h2_prefilter.pkl  h_sc_prefilt.pkl  l1_ham5_plant_xyz.txt  l1_ham5_trans_xyz.txt  l1_ham7_plant_xyz.txt  l1_ham7_trans_xyz.txt  l1_ham8_plant_xyz.txt  l1_ham8_trans_xyz.txt  seismic_injection_data_20231210.xml  sushant_noise.txt
sammie/etc/data/filter_bank/h1_bank/: h1_high_high.pkl  h1_high_low.pkl  h1_high_mid.pkl  h1_hinf_1.pkl  h1_hinf_2.pkl  h1_mid_high.pkl
sammie/etc/data/filter_bank/h2_bank/: h2_high_high.pkl  h2_high_low.pkl  h2_high_mid.pkl  h2_hinf_1.pkl  h2_hinf_3.pkl  h2_low_high.pkl  h2_low_low.pkl  h2_low_mid.pkl  h2_mid_high.pkl  h2_mid_low.pkl  h2_mid_mid.pkl
sammie/etc/data/filter_bank/sensor_correction_bank/: h_sc_high_high.pkl  h_sc_high_low.pkl  h_sc_hinf_1.pkl  h_sc_hinf_3.pkl  h_sc_low_high.pkl
sammie/sammie/: L1ISIHAM7.txt  L1ISIHAM8.txt  blend_sc_iso.py  blend_sc_iso_ham7.py  blend_sc_iso_ham8.py  current_vs_model.py  data.py  gs13_noise.py  ham7.py  multiple_filter.py  noise_profile.py  output.json  plant_model_ham5.py  plant_model_ham7.py  plant_model_ham8.py  prediction.ipynb  rms.json  run.py  scrap_code.py  sensor_noise_model.py  test.py  tilt_model.py
(+189 files in other folders)
